istio-system/addons/requestauthentication-addons.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: addons
spec:
  selector:
    matchLabels:
      istio-addon: "true"
  jwtRules:
  - issuer: https://accounts.google.com
    jwksUri: https://www.googleapis.com/oauth2/v3/certs
#    forwardOriginalToken: true
