istio-system/addons/virtualservice-prometheus.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - "prometheus.istio-demo.timebertt.dev"
  gateways:
  - addons-gateway
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
