istio-system/addons/virtualservice-tracing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tracing
spec:
  hosts:
  - "tracing.istio-demo.timebertt.dev"
  gateways:
  - addons-gateway
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
