istio-system/addons/authorizationpolicy-enduser.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: addons-allow-timebertt
spec:
  selector:
    matchLabels:
      istio-addon: "true"
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[iss]
      values: ["https://accounts.google.com"]
    - key: request.auth.claims[email]
      values: ["timebertt@gmail.com"]
