istio-system/addons/authorizationpolicy-peers.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: addons-allow-to-prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/istio-system/sa/grafana"
        - "cluster.local/ns/istio-system/sa/kiali"
